added some of content and some of layout.

--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
 
     <!-- build:css styles/vendor.css -->
     <!-- bower:css -->
+    <link href='https://fonts.googleapis.com/css?family=Muli|Asap:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="/bower_components/normalize-css/normalize.css" />
     <!-- endbower -->
     <!-- endbuild -->
@@ -20,6 +21,102 @@
 
   </head>
   <body>
+
+    <section class="hero">
+      <div class="section-inner">
+        <h1>Rubén Guerrero Sánchez</h1>
+        <ul>
+          <li>08/03/1992</li>
+          <li>Madrid, Madrid</li>
+          <li>677 176 592</li>
+          <li><a href="mailto:yo@rubenguerrero.com" title="Escribir email">yo@rubenguerrero.com</a></li>
+        </ul>
+      </div>
+    </section>
+
+    <section class="works">
+      <div class="section-inner">
+
+        <h2 class="section-title">Experiencia profesional</h2>
+
+        <div class="work">
+            <div class="logo-container">
+                <h3>idealista.com</h3>
+                <time>Feb 2014 - Actualmente</time>
+
+                <span>Portal inmobiliario</span>
+                <span>Trabajo en producto</span>
+              </div>
+              <div class="description-container">
+                <p>Encargado junto con los demás miembros del equipo de frontend del desarrollo de las distintas secciones del portal idealista.com.</p>
+                <p>Trabajamos codo con codo con el equipo de UX y el equipo de Backend para desarrollar <strong>componentes reutilizables, user-friendly</strong>, y que además sean <strong>óptimos en cuanto al consumo de recursos</strong> (tanto de los navegadores, como de la red).</p>
+                <p>Llevamos a cabo tanto la <strong>maquetación responsive</strong> de toda la web, como el desarrollo de los componentes que la conforman.</p>
+                <p>Principales tecnologías/herramientas utilizadas en el día a día:</p>
+                <ul>
+                  <li><strong>VanillaJS - javascript sin frameworks/librerias</strong></li>
+                  <li>jQuery, Dojo</li>
+                  <li>D3.js</li>
+                  <li>Grunt, Gulp</li>
+                  <li>Bower, NPM</li>
+                  <li>Browserfy</li>
+                  <li>LESS, SCSS, OOCSS</li>
+                  <li>Agile: pair programming, Kanban, Scrum, Refactor</li>
+                  <li>Git</li>
+                  <li>Ubuntu</li>
+                </ul>
+              </div>
+          </div>
+
+          <div class="work">
+              <div class="logo-container">
+                <h3>Redbility</h3>
+                <time>Dic 2013 - Feb 2014</time>
+                <span>Agencia de diseño</span>
+                <span>Trabajé para clientes externos</span>
+              </div>
+              <div class="description-container">
+
+                <p>Trabajé en equipo de frontend, encargado de la maquetación responsive y desarrollo de componentes de los clientes de la agencia. Involucrándome en todo el proceso con los distintos equipos <strong>(arquitectura, diseño y desarrollo)</strong> tratabamos de desarrollar experiencias muy centradas en el usuario, usables y además atractivas.</p>
+
+                <p>El nivel de exigencia de los prototipos era uno de los mayores retos, junto con las interacciones y animaciones de los componentes. Algunos de los clientes con los que trabajé: Acciona, Carrera y Carrera, El corte inglés...</p>
+
+              </div>
+          </div>
+
+          <div class="work">
+              <div class="logo-container">
+                <h3>Peoplecall</h3>
+                <time>Jul 2012 - Dic 2013</time>
+                <span>Empresa de telecomunicaciones</span>
+                <span>Trabajando en producto</span>
+              </div>
+              <div class="description-container">
+                <p>hou huo</p>
+                <p>hou huo</p>
+                <p>hou huo</p>
+              </div>
+          </div>
+
+          <div class="work">
+            <div class="logo-container">
+              <h3>Binocean</h3>
+              <time>Feb 2012 - Mar 2014</time>
+              <span>Empresa de desarrollo</span>
+              <span>Trabajando para clientes externos</span>
+            </div>
+            <div class="description-container">
+              <p>Hi hou</p>
+            </div>
+          </div>
+
+      </div>
+    </section>
+
+    <section class="skills">
+      <div class="section-inner">
+        <h2 class="section-title">Conocimientos</h2>
+      </div>
+    </section>
 
     <script>
       (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
